@@ -38,7 +38,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import org.springframework.asm.Attribute;
 import org.springframework.asm.Type;
 
 /**
@@ -63,9 +62,9 @@ public class ReflectUtils {
 
 	private static final Method classLoaderDefineClassMethod;
 
-	private static final ProtectionDomain PROTECTION_DOMAIN;
-
 	private static final Throwable THROWABLE;
+
+	private static final ProtectionDomain PROTECTION_DOMAIN;
 
 	private static final List<Method> OBJECT_METHODS = new ArrayList<Method>();
 
@@ -73,7 +72,6 @@ public class ReflectUtils {
 		Method privateLookupIn;
 		Method lookupDefineClass;
 		Method classLoaderDefineClass;
-		ProtectionDomain protectionDomain;
 		Throwable throwable = null;
 		try {
 			privateLookupIn = (Method) AccessController.doPrivileged(new PrivilegedExceptionAction() {
@@ -102,39 +100,37 @@ public class ReflectUtils {
 							String.class, byte[].class, Integer.TYPE, Integer.TYPE, ProtectionDomain.class);
 				}
 			});
-			protectionDomain = getProtectionDomain(ReflectUtils.class);
-			AccessController.doPrivileged(new PrivilegedExceptionAction() {
-				public Object run() throws Exception {
-					Method[] methods = Object.class.getDeclaredMethods();
-					for (Method method : methods) {
-						if ("finalize".equals(method.getName())
-								|| (method.getModifiers() & (Modifier.FINAL | Modifier.STATIC)) > 0) {
-							continue;
-						}
-						OBJECT_METHODS.add(method);
-					}
-					return null;
-				}
-			});
 		}
 		catch (Throwable t) {
 			privateLookupIn = null;
 			lookupDefineClass = null;
 			classLoaderDefineClass = null;
-			protectionDomain = null;
 			throwable = t;
 		}
+
 		privateLookupInMethod = privateLookupIn;
 		lookupDefineClassMethod = lookupDefineClass;
 		classLoaderDefineClassMethod = classLoaderDefineClass;
-		PROTECTION_DOMAIN = protectionDomain;
 		THROWABLE = throwable;
+		PROTECTION_DOMAIN = getProtectionDomain(ReflectUtils.class);
+
+		AccessController.doPrivileged(new PrivilegedAction() {
+			public Object run() {
+				Method[] methods = Object.class.getDeclaredMethods();
+				for (Method method : methods) {
+					if ("finalize".equals(method.getName())
+							|| (method.getModifiers() & (Modifier.FINAL | Modifier.STATIC)) > 0) {
+						continue;
+					}
+					OBJECT_METHODS.add(method);
+				}
+				return null;
+			}
+		});
 	}
 	// SPRING PATCH END
 
-	private static final String[] CGLIB_PACKAGES = {
-			"java.lang",
-	};
+	private static final String[] CGLIB_PACKAGES = {"java.lang"};
 
 	static {
 		primitives.put("byte", Byte.TYPE);
@@ -494,11 +490,12 @@ public class ReflectUtils {
 		return defineClass(className, b, loader, protectionDomain, null);
 	}
 
-	@SuppressWarnings("deprecation")  // on JDK 9
+	@SuppressWarnings({"deprecation", "serial"})
 	public static Class defineClass(String className, byte[] b, ClassLoader loader,
 			ProtectionDomain protectionDomain, Class<?> contextClass) throws Exception {
 
 		Class c = null;
+		Throwable t = THROWABLE;
 
 		// Preferred option: JDK 9+ Lookup.defineClass API if ClassLoader matches
 		if (contextClass != null && contextClass.getClassLoader() == loader &&
@@ -516,32 +513,56 @@ public class ReflectUtils {
 				// in case of plain LinkageError (class already defined)
 				// or IllegalArgumentException (class in different package):
 				// fall through to traditional ClassLoader.defineClass below
+				t = target;
 			}
 			catch (Throwable ex) {
 				throw new CodeGenerationException(ex);
 			}
 		}
 
-		// Classic option: protected ClassLoader.defineClass method
-		if (c == null && classLoaderDefineClassMethod != null) {
+		// Direct defineClass attempt on the target Classloader
+		if (c == null) {
 			if (protectionDomain == null) {
 				protectionDomain = PROTECTION_DOMAIN;
 			}
-			Object[] args = new Object[]{className, b, 0, b.length, protectionDomain};
+
+			// Look for publicDefineClass(String name, byte[] b, ProtectionDomain protectionDomain)
 			try {
-				if (!classLoaderDefineClassMethod.isAccessible()) {
-					classLoaderDefineClassMethod.setAccessible(true);
-				}
-				c = (Class) classLoaderDefineClassMethod.invoke(loader, args);
+				Method publicDefineClass = loader.getClass().getMethod(
+						"publicDefineClass", String.class, byte[].class, ProtectionDomain.class);
+				c = (Class) publicDefineClass.invoke(loader, className, b, protectionDomain);
 			}
 			catch (InvocationTargetException ex) {
-				throw new CodeGenerationException(ex.getTargetException());
+				if (!(ex.getTargetException() instanceof UnsupportedOperationException)) {
+					throw new CodeGenerationException(ex.getTargetException());
+				}
+				// in case of UnsupportedOperationException, fall through
+				t = ex.getTargetException();
 			}
 			catch (Throwable ex) {
-				// Fall through if setAccessible fails with InaccessibleObjectException on JDK 9+
-				// (on the module path and/or with a JVM bootstrapped with --illegal-access=deny)
-				if (!ex.getClass().getName().endsWith("InaccessibleObjectException")) {
-					throw new CodeGenerationException(ex);
+				// publicDefineClass method not available -> fall through
+				t = ex;
+			}
+
+			// Classic option: protected ClassLoader.defineClass method
+			if (c == null && classLoaderDefineClassMethod != null) {
+				Object[] args = new Object[]{className, b, 0, b.length, protectionDomain};
+				try {
+					if (!classLoaderDefineClassMethod.isAccessible()) {
+						classLoaderDefineClassMethod.setAccessible(true);
+					}
+					c = (Class) classLoaderDefineClassMethod.invoke(loader, args);
+				}
+				catch (InvocationTargetException ex) {
+					throw new CodeGenerationException(ex.getTargetException());
+				}
+				catch (Throwable ex) {
+					// Fall through if setAccessible fails with InaccessibleObjectException on JDK 9+
+					// (on the module path and/or with a JVM bootstrapped with --illegal-access=deny)
+					if (!ex.getClass().getName().endsWith("InaccessibleObjectException")) {
+						throw new CodeGenerationException(ex);
+					}
+					t = ex;
 				}
 			}
 		}
@@ -557,6 +578,16 @@ public class ReflectUtils {
 			catch (InvocationTargetException ex) {
 				throw new CodeGenerationException(ex.getTargetException());
 			}
+			catch (IllegalAccessException ex) {
+				throw new CodeGenerationException(ex) {
+					@Override
+					public String getMessage() {
+						return "ClassLoader mismatch for [" + contextClass.getName() +
+								"]: JVM should be started with --add-opens=java.base/java.lang=ALL-UNNAMED " +
+								"for ClassLoader.defineClass to be accessible on " + loader.getClass().getName();
+					}
+				};
+			}
 			catch (Throwable ex) {
 				throw new CodeGenerationException(ex);
 			}
@@ -564,7 +595,7 @@ public class ReflectUtils {
 
 		// No defineClass variant available at all?
 		if (c == null) {
-			throw new CodeGenerationException(THROWABLE);
+			throw new CodeGenerationException(t);
 		}
 
 		// Force static initializers to run.
@@ -603,10 +634,6 @@ public class ReflectUtils {
 
 			public Type[] getExceptionTypes() {
 				return ReflectUtils.getExceptionTypes(member);
-			}
-
-			public Attribute getAttribute() {
-				return null;
 			}
 		};
 	}
